--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-   "name":"react-native-form-builder",
-   "version":"1.0.12",
-   "description":"Generate Awesome Forms In an easy way",
-   "main":"src/index.js",
-   "scripts":{
-      "test":"echo \"Error: no test specified\" && exit 1"
+   "name": "react-native-form-composer",
+   "version": "1.0.13",
+   "description": "Generate Awesome Forms In an easy way",
+   "main": "src/index.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1"
    },
-   "repository":{
-      "type":"git",
-      "url":"git+https://github.com/bietkul/react-native-form-builder.git"
+   "repository": {
+      "type": "git",
+      "url": "git+https://github.com/majus28/react-native-form-composer.git"
    },
-   "_npmUser":{
-      "name":"anjuma",
-      "email":"kuldepsaxena@155@gmail.com"
+   "_npmUser": {
+      "name": "majus28",
+      "email": "majushan97@gmail.com"
    },
-   "author":"Kuldeep Saxena",
-   "license":"MIT",
-   "bugs":{
-      "url":"https://github.com/bietkul/react-native-form-builder/issues"
+   "author": "Majushan",
+   "license": "MIT",
+   "bugs": {
+      "url": "https://github.com/majus28/react-native-form-composer/issues"
    },
-   "homepage":"https://github.com/bietkul/react-native-form-builder#readme",
-   "keywords":[
+   "homepage": "https://github.com/majus28/react-native-form-composer#readme",
+   "keywords": [
       "android",
       "ios",
       "react",
@@ -32,21 +32,23 @@
       "generator",
       "builder"
    ],
-   "dependencies":{
-      "fs-extra":"^3.0.1",
-      "print-message":"^2.1.0",
-      "lodash":"^4.17.4",
-      "react-native-keyboard-aware-scroll-view":"^0.2.7",
-      "react-native-i18n":"^1.0.0"
+   "dependencies": {
+      "fs-extra": "^3.0.1",
+      "lodash": "^4.17.4",
+      "print-message": "^2.1.0",
+      "react-native-i18n": "^1.0.0",
+      "prop-types": "^15.6.0",
+      "react-native-keyboard-aware-scroll-view": "^0.2.7",
+      "user": "0.0.0"
    },
-   "devDependencies":{
-      "react":"15.4.2",
-      "react-native":"0.41.1",
-      "native-base":"^2.0.6"
+   "devDependencies": {
+      "react": "15.4.2",
+      "react-native": "0.41.1",
+      "native-base": "^2.0.6"
    },
    "peerDependencies": {
       "react-native": ">=0.41.1",
       "react": ">=15.4.2-alpha.3",
       "native-base": "^2.0.6"
-    }
+   }
 }
