--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
    "name": "react-native-form-composer",
-   "version": "1.2",
+   "version": "1.1.3",
    "description": "Generate Awesome Forms In an easy way",
    "main": "src/index.js",
    "scripts": {
@@ -38,7 +38,7 @@
       "print-message": "^2.1.0",
       "react-native-i18n": "^1.0.0",
       "prop-types": "^15.6.0",
-      "react-native-keyboard-aware-scroll-view": "^0.4",
+      "react-native-keyboard-aware-scroll-view": "^0.4.*",
       "user": "0.0.0"
    },
    "devDependencies": {
